--- a/frontend/src/ToolJetUI/SwitchGroup/toggleGroup.scss
+++ b/frontend/src/ToolJetUI/SwitchGroup/toggleGroup.scss
@@ -3,12 +3,17 @@
   background-color:  var(--slate4);
   border-radius: 6px;
   box-shadow: 0 2px 10px var(--black-a7);
+  padding: 2px;
+  justify-content: space-between;
+  width: 142px;
+
 }
 
 .ToggleGroupItem {
   all: unset;
   background-color:  var(--slate4);
   color: var(--slate9);
+  flex: 1; 
   min-height: 28px;
   display: flex;
   font-size: 12px;
@@ -29,12 +34,18 @@
   border-bottom-right-radius: 4px;
 }
 .ToggleGroupItem[data-state='on'] {
-  padding: 2px 2px;
+  background-color:var(--slate1);
   .toggle-item {
     background-color: var(--slate1);
     color: var(--indigo9);
     border-radius: 6px;
     padding: 4px;
+  }
+  svg{
+    path{
+      fill:var(--indigo9)
+
+    }
   }
 }
 .ToggleGroupItem:focus {
