--- a/frontend/src/_styles/designtheme.scss
+++ b/frontend/src/_styles/designtheme.scss
@@ -66,6 +66,7 @@
     --base-black: #18181A;
     --text-black-000 : #000000;
     --slate12:#313739;
+    --border-main:var(--slate11);
 }
 
 .dark-theme {
