--- a/frontend/src/_styles/drawer.scss
+++ b/frontend/src/_styles/drawer.scss
@@ -8,7 +8,7 @@
   height: 100%;
   overflow: auto;
   position: fixed;
-  border: 1px solid var(--slate5);
+  border: 1px solid var(--border-main);
   box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
   transition: transform var(--transition-speed) ease;
   z-index: 1000;
