--- a/frontend/src/_styles/dropdown-custom.scss
+++ b/frontend/src/_styles/dropdown-custom.scss
@@ -48,7 +48,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border-top: 1px solid var(--slate5);
+    border-top: 1px solid var(--border-main);
 }
 
 .tj-org-select {
