--- a/frontend/src/_styles/global-datasources.scss
+++ b/frontend/src/_styles/global-datasources.scss
@@ -105,7 +105,7 @@
     }
 
     .modal-content {
-        border: 1px solid var(--slate5);
+        border: 1px solid var(--border-main);
         background-color: var(--base) !important;
 
         .input-icon {
