--- a/frontend/src/_styles/widgets/multi-select.scss
+++ b/frontend/src/_styles/widgets/multi-select.scss
@@ -41,7 +41,7 @@
   .select-search__not-found {
     background-color: var(--base) !important;
     color: var(--slate12);
-    border: 1px solid var(--slate5);
+    border: 1px solid var(--border-main);
     box-shadow: 0px 32px 64px -12px rgba(16, 24, 40, 0.14);
     border-radius: 6px;
     margin: 0 auto;
@@ -106,7 +106,7 @@
 
     .count-main {
       padding: 1px 3px 1px 7px;
-      border: 1px solid var(--slate5);
+      border: 1px solid var(--border-main);
       border-radius: 5px;
       background-color: var(--slate8);
       color: var(--slate12);
@@ -153,7 +153,7 @@
   .select-search-dark__select {
     background-color: var(--base);
     padding: 14px;
-    border: 1px solid var(--slate5);
+    border: 1px solid var(--border-main);
     box-shadow: 0px 32px 64px -12px rgba(16, 24, 40, 0.14);
     border-radius: 6px;
     top: 34px !important;
